# janim

./: .gitignore  CMakeLists.txt  README.md  document.tex  example4.cpp  janim.hpp  janim_automata.hpp  main  main.cpp
examples/: example1.cpp  example1.tex  example2.cpp  example2.tex  example3.cpp  example3.tex
